--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/Exersice.js/Exo1.js" defer></script>
+    <script src="/JavaScript avancé/Exersice.js/Exo1.js" defer></script>
     
     <title>JS advanced</title>
 </head>
