--- a/localStorage.html
+++ b/localStorage.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/Exersice.js/Exo3.js" defer></script>
+    <script src="/JavaScript avancé/Exersice.js/Exo3.js" defer></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>LocalStorage</title>
   </head>
