--- a/students.html
+++ b/students.html
@@ -4,14 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/JavaScript avancé/Exersice.js/Exo2.js" defer></script>
+    <script src="/Exersice.js/Exo2.js" defer></script>
     <title>CardStudents</title>
   </head>
   <body>
-      <h1 class="bg-gradient-to-r from-green-400 to-blue-500 text-center text-9xl italic text-stone-300">POP SCHOOL 2022</h1>
+      <h1 class="bg-gradient-to-r from-green-400 to-blue-500 text-center md:text-8xl text-3xl italic text-stone-300">POP SCHOOL :<span> undefined 2022</span></h1>
       <div
       id="students"
-      class="grid grid-cols-3 pl-40 bg-gradient-to-r from-green-400 to-blue-500"
+      class="grid md:grid-cols-3 md:pl-40 justify-center bg-gradient-to-r from-green-400 to-blue-500"
     ></div>
     </div>
   </body>
