--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img id="myImg" src="" alt="">
         <button
         id="showImg"
-        class="text-xl bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-8 border border-blue-700 rounded"
+        class="text-xl bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-8 border border-blue-700 "
         type="button"
       >
         Cliquer pour afficher le image
